// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth should render Signin Form component correctly 1`] = `
<Fragment>
  <Header
    dateType={null}
    logout={null}
    showTime={true}
    type="unauth"
    updateCurrentDate={null}
    user={null}
  />
  <div
    className="main-wrapper auth-wrapper"
  >
    <div
      className="auth"
    >
      <div
        className="title"
      >
        <h2>
          Welcome Back
        </h2>
        <hr
          className="w-75"
        />
      </div>
      <Connect(Form)
        isAuthenticated={false}
        location={
          {
            "pathname": "/signin",
            "state": {
              "from": {
                "pathname": "/",
              },
            },
          }
        }
        meta={
          {
            "btnText": "SIGN IN",
            "extra": <React.Fragment>
              <p
                className="form-extra-info forgot-password"
              >
                <Link
                  to="/forgot-password"
                >
                  Forgot Password?
                </Link>
              </p>
              <p
                className="form-extra-info text-center"
              >
                <React.Fragment>
                  Don't have an account? 
                  <Link
                    to="/signup?role=customer"
                  >
                    Signup Here
                  </Link>
                </React.Fragment>
              </p>
              <p
                className="text-center"
              >
                Or
              </p>
              <p
                className="form-extra-info text-center"
              >
                <Link
                  to="/signup?role=caterer"
                >
                  Signup as a Caterer
                </Link>
              </p>
            </React.Fragment>,
          }
        }
        submitError={null}
        submitting={false}
        type="signin"
      />
    </div>
  </div>
  <Footer />
</Fragment>
`;

exports[`Auth should render caterer's signup form correctly when role query is caterer 1`] = `
<Fragment>
  <Header
    dateType={null}
    logout={null}
    showTime={true}
    type="unauth"
    updateCurrentDate={null}
    user={null}
  />
  <div
    className="main-wrapper auth-wrapper"
  >
    <div
      className="auth"
    >
      <div
        className="title"
      >
        <h2>
          Start Serving Customers
        </h2>
        <hr
          className="w-75"
        />
      </div>
      <Connect(Form)
        isAuthenticated={false}
        location={
          {
            "pathname": "/signup",
            "search": "?role=caterer",
            "state": {
              "from": {
                "pathname": "/",
              },
            },
          }
        }
        meta={
          {
            "btnText": "SIGN UP",
            "extra": <React.Fragment>
              <p
                className="form-extra-info text-center"
              >
                <React.Fragment>
                  Already have an account? 
                  <Link
                    to="/signin"
                  >
                    Sign In Here
                  </Link>
                </React.Fragment>
              </p>
              <p
                className="text-center"
              >
                Or
              </p>
              <p
                className="form-extra-info text-center"
              >
                <Link
                  to="/signup?role=customer"
                >
                  Signup as a Customer
                </Link>
              </p>
            </React.Fragment>,
          }
        }
        submitError={null}
        submitting={false}
        type="catererSignup"
      />
    </div>
  </div>
  <Footer />
</Fragment>
`;

exports[`Auth should render customer's signup form component correctly 1`] = `
<Fragment>
  <Header
    dateType={null}
    logout={null}
    showTime={true}
    type="unauth"
    updateCurrentDate={null}
    user={null}
  />
  <div
    className="main-wrapper auth-wrapper"
  >
    <div
      className="auth"
    >
      <div
        className="title"
      >
        <h2>
          Start Filling Your Belly
        </h2>
        <hr
          className="w-75"
        />
      </div>
      <Connect(Form)
        isAuthenticated={false}
        location={
          {
            "pathname": "/signup",
            "search": "?role=customer",
            "state": {
              "from": {
                "pathname": "/",
              },
            },
          }
        }
        meta={
          {
            "btnText": "SIGN UP",
            "extra": <React.Fragment>
              <p
                className="form-extra-info text-center"
              >
                <React.Fragment>
                  Already have an account? 
                  <Link
                    to="/signin"
                  >
                    Sign In Here
                  </Link>
                </React.Fragment>
              </p>
              <p
                className="text-center"
              >
                Or
              </p>
              <p
                className="form-extra-info text-center"
              >
                <Link
                  to="/signup?role=caterer"
                >
                  Signup as a Caterer
                </Link>
              </p>
            </React.Fragment>,
          }
        }
        submitError={null}
        submitting={false}
        type="customerSignup"
      />
    </div>
  </div>
  <Footer />
</Fragment>
`;

exports[`Auth should render signin component that is connected to the redux store correctly 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Auth)
    isAuthenticated={false}
    location={
      {
        "pathname": "/signin",
        "state": {
          "from": {
            "pathname": "/",
          },
        },
      }
    }
    submitError={null}
    submitting={false}
    type="signin"
  >
    <Auth
      dispatch={[Function]}
      isAuthenticated={false}
      location={
        {
          "pathname": "/signin",
          "state": {
            "from": {
              "pathname": "/",
            },
          },
        }
      }
      submitError={null}
      submitting={false}
      type="signin"
    >
      <Header
        dateType={null}
        logout={null}
        showTime={true}
        type="unauth"
        updateCurrentDate={null}
        user={null}
      >
        <div
          className="header unauth"
        >
          <div
            className="navbar unauth-navbar"
          >
            <div
              className="page-title"
            >
              <h3>
                <Link
                  to="/"
                >
                  <a
                    href="/"
                  >
                    BOOK-A-MEAL
                  </a>
                </Link>
              </h3>
            </div>
          </div>
        </div>
      </Header>
      <div
        className="main-wrapper auth-wrapper"
      >
        <div
          className="auth"
        >
          <div
            className="title"
          >
            <h2>
              Welcome Back
            </h2>
            <hr
              className="w-75"
            />
          </div>
          <Connect(Form)
            dispatch={[Function]}
            isAuthenticated={false}
            location={
              {
                "pathname": "/signin",
                "state": {
                  "from": {
                    "pathname": "/",
                  },
                },
              }
            }
            meta={
              {
                "btnText": "SIGN IN",
                "extra": <React.Fragment>
                  <p
                    className="form-extra-info forgot-password"
                  >
                    <Link
                      to="/forgot-password"
                    >
                      Forgot Password?
                    </Link>
                  </p>
                  <p
                    className="form-extra-info text-center"
                  >
                    <React.Fragment>
                      Don't have an account? 
                      <Link
                        to="/signup?role=customer"
                      >
                        Signup Here
                      </Link>
                    </React.Fragment>
                  </p>
                  <p
                    className="text-center"
                  >
                    Or
                  </p>
                  <p
                    className="form-extra-info text-center"
                  >
                    <Link
                      to="/signup?role=caterer"
                    >
                      Signup as a Caterer
                    </Link>
                  </p>
                </React.Fragment>,
              }
            }
            submitError={null}
            submitting={false}
            type="signin"
          >
            <Form
              dispatch={[Function]}
              email={null}
              isAuthenticated={false}
              location={
                {
                  "pathname": "/signin",
                  "state": {
                    "from": {
                      "pathname": "/",
                    },
                  },
                }
              }
              meal={null}
              meta={
                {
                  "btnText": "SIGN IN",
                  "extra": <React.Fragment>
                    <p
                      className="form-extra-info forgot-password"
                    >
                      <Link
                        to="/forgot-password"
                      >
                        Forgot Password?
                      </Link>
                    </p>
                    <p
                      className="form-extra-info text-center"
                    >
                      <React.Fragment>
                        Don't have an account? 
                        <Link
                          to="/signup?role=customer"
                        >
                          Signup Here
                        </Link>
                      </React.Fragment>
                    </p>
                    <p
                      className="text-center"
                    >
                      Or
                    </p>
                    <p
                      className="form-extra-info text-center"
                    >
                      <Link
                        to="/signup?role=caterer"
                      >
                        Signup as a Caterer
                      </Link>
                    </p>
                  </React.Fragment>,
                }
              }
              submitError={null}
              submitting={false}
              token={null}
              type="signin"
              uploading={null}
            >
              <div>
                <form
                  onSubmit={[Function]}
                >
                  <SigninForm
                    handlers={
                      {
                        "handleBlur": [Function],
                        "handleChange": [Function],
                        "handleFocus": [Function],
                        "handleSubmit": [Function],
                      }
                    }
                    state={
                      {
                        "error": {
                          "email": null,
                          "password": null,
                        },
                        "formValid": false,
                        "pristine": true,
                        "touched": {
                          "email": false,
                          "password": false,
                        },
                        "type": "signin",
                        "typingTimeout": 0,
                        "values": {
                          "email": "",
                          "password": "",
                        },
                      }
                    }
                    type="signin"
                  >
                    <RenderInput
                      handleBlur={[Function]}
                      handleChange={[Function]}
                      handleFocus={[Function]}
                      id="email"
                      label="Email Address"
                      meta={
                        {
                          "asyncValidating": undefined,
                          "error": null,
                          "touched": false,
                        }
                      }
                      name="email"
                      placeholder=""
                      required={true}
                      type="email"
                      value=""
                    >
                      <div
                        className="form-input"
                      >
                        <label
                          htmlFor="email"
                          onClick={[Function]}
                        >
                          Email Address
                          <span
                            className="danger"
                          >
                            *
                          </span>
                        </label>
                        <input
                          className=""
                          id="email"
                          name="email"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          placeholder=""
                          type="email"
                          value=""
                        />
                         
                      </div>
                    </RenderInput>
                    <RenderInput
                      handleBlur={[Function]}
                      handleChange={[Function]}
                      handleFocus={[Function]}
                      id="password"
                      label="Password"
                      meta={
                        {
                          "error": null,
                          "touched": false,
                        }
                      }
                      name="password"
                      placeholder=""
                      required={true}
                      type="password"
                      value=""
                    >
                      <div
                        className="form-input"
                      >
                        <label
                          htmlFor="password"
                          onClick={[Function]}
                        >
                          Password
                          <span
                            className="danger"
                          >
                            *
                          </span>
                        </label>
                        <input
                          className=""
                          id="password"
                          name="password"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          placeholder=""
                          type="password"
                          value=""
                        />
                         
                      </div>
                    </RenderInput>
                  </SigninForm>
                  <button
                    className="btn btn-pri btn-block"
                    disabled={true}
                    type="submit"
                  >
                    SIGN IN
                  </button>
                </form>
                <p
                  className="form-extra-info forgot-password"
                >
                  <Link
                    to="/forgot-password"
                  >
                    <a
                      href="/forgot-password"
                    >
                      Forgot Password?
                    </a>
                  </Link>
                </p>
                <p
                  className="form-extra-info text-center"
                >
                  Don't have an account? 
                  <Link
                    to="/signup?role=customer"
                  >
                    <a
                      href="/signup?role=customer"
                    >
                      Signup Here
                    </a>
                  </Link>
                </p>
                <p
                  className="text-center"
                >
                  Or
                </p>
                <p
                  className="form-extra-info text-center"
                >
                  <Link
                    to="/signup?role=caterer"
                  >
                    <a
                      href="/signup?role=caterer"
                    >
                      Signup as a Caterer
                    </a>
                  </Link>
                </p>
              </div>
            </Form>
          </Connect(Form)>
        </div>
      </div>
      <Footer>
        <div
          className="footer"
        >
          <p>
            © 2018. Iveren Shaguy. All images were gotten from the internet and are not mine.
          </p>
        </div>
      </Footer>
    </Auth>
  </Connect(Auth)>
</Provider>
`;
